--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h1>KahootKL</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN" required>
-      <input type="text" id="name" placeholder="Bot name (e.g., Bot)" required>
+      <input type="text" id="name" placeholder="Bot name (Bot 1, Kleine_Lars)" required>
       <input type="number" id="count" placeholder="Number of bots" required min="1" max="100">
       <button type="submit">Send Bots</button>
     </form>
