--- a/KLKahoot.html
+++ b/KLKahoot.html
@@ -93,7 +93,7 @@
 </head>
 <body>
 
-  <img src="Ontwerp zonder titel.jpeg" alt="Logo" class="logo" />
+  <img src="Ontwerp zonder titel.png" alt="Logo" class="logo" />
 
   <!-- KahootKL -->
   <div class="section">
