--- a/KLKahoot.html
+++ b/KLKahoot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kahoot Bot Launcher & Socials</title>
+  <title>KLKahoot</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
