--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kahoot Bot Launcher & Socials</title>
+  <title>KL Kahoot</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -105,9 +105,9 @@
   <!-- Logo -->
   <img src="Ontwerp zonder titel.png" alt="Logo" class="logo">
 
-  <!-- Kahoot Bot Launcher -->
+  <!-- KL Kahoot -->
   <div class="section">
-    <h1>Kahoot Bot Launcher</h1>
+    <h1>KL Kahoot</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN (6-7 digits)" required>
       <input type="text" id="name" placeholder="Bot name (e.g. Bot)" required>
