--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h1>KL Kahoot</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN (6-7 digits)" required>
-      <input type="text" id="name" placeholder="Bot name (e.g. Bot)" required>
+      <input type="text" id="name" placeholder="Bot name (Bot1, Kleine_Lars)" required>
       <input type="number" id="count" placeholder="Number of bots" required min="1" max="100">
       <button type="submit">Launch Bots</button>
     </form>
