--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KL Kahoot</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -113,12 +114,18 @@
       font-size: 14px;
       text-align: center;
     }
+
+    .logo {
+      max-width: 150px;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
 
   <!-- KL Kahoot -->
   <div class="section">
+    <img src="logo.png" alt="KL Kahoot Logo" class="logo">
     <h1 class="glitch">KL Kahoot</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN (6 cijfers)" required>
