--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
       font-family: 'Segoe UI', sans-serif;
       background: white;
       margin: 0;
-      padding: 40px;
+      padding-top: 80px;
       text-align: center;
       opacity: 0;
       animation: fadeIn 1.5s ease forwards;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background: white;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      z-index: 1000;
+    }
+
+    .logo {
+      height: 40px;
     }
 
     @keyframes fadeIn {
@@ -114,18 +132,17 @@
       font-size: 14px;
       text-align: center;
     }
-
-    .logo {
-      max-width: 150px;
-      margin-bottom: 20px;
-    }
   </style>
 </head>
 <body>
 
+  <!-- Logo Header -->
+  <header>
+    <img src="logo.png" alt="KL Kahoot Logo" class="logo">
+  </header>
+
   <!-- KL Kahoot -->
   <div class="section">
-    <img src="logo.png" alt="KL Kahoot Logo" class="logo">
     <h1 class="glitch">KL Kahoot</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN (6 cijfers)" required>
