--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         origin: { y: 0.6 }
       });
 
-      alert("✅ Successfully launched bots!)");
+      alert("✅ Successfully launched bots!");
     });
   </script>
 
