--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <h1 class="glitch">KL Kahoot</h1>
     <form id="botForm">
       <input type="text" id="pin" placeholder="Kahoot PIN (6 digits)" required>
-      <input type="text" id="name" placeholder="Bot name (e.g. Bot, Little_Lars)" required>
+      <input type="text" id="name" placeholder="Bot name (Bot1, Kleine_Lars)" required>
       <input type="number" id="count" placeholder="Number of bots" required min="1" max="100">
       <button type="submit">Launch Bots</button>
     </form>
